logs/cquery.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cQuery-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/cquery'...
Compiling './lib/python3.5/site-packages/cquery/cli.py'...
***   File "./lib/python3.5/site-packages/cquery/cli.py", line 63
    print "Error: %s" % e
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cquery/tests'...
Compiling './lib/python3.5/site-packages/cquery/tests/__init__.py'...
***   File "./lib/python3.5/site-packages/cquery/tests/__init__.py", line 68
    """
     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 454-455: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/cquery/vendor'...
Listing './lib/python3.5/site-packages/cquery/vendor/click'...
Listing './lib/python3.5/site-packages/cquery/vendor/nose'...
Compiling './lib/python3.5/site-packages/cquery/vendor/nose/config.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/config.py", line 68
    except ConfigParser.Error, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cquery/vendor/nose/core.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/core.py", line 153
    print "%s version %s" % (os.path.basename(sys.argv[0]), __version__)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cquery/vendor/nose/ext'...
Compiling './lib/python3.5/site-packages/cquery/vendor/nose/ext/dtcompat.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/ext/dtcompat.py", line 344
    raise TypeError, 'Expected a module: %r' % module
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cquery/vendor/nose/failure.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/failure.py", line 39
    raise self.exc_val, None, self.tb
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cquery/vendor/nose/inspector.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/inspector.py", line 41
    except tokenize.TokenError, e:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cquery/vendor/nose/plugins'...
Compiling './lib/python3.5/site-packages/cquery/vendor/nose/plugins/base.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/plugins/base.py", line 70
    except OptionConflictError, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cquery/vendor/nose/plugins/cover.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/plugins/cover.py", line 179
    except coverage.misc.CoverageException, e:
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cquery/vendor/nose/plugins/doctests.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/plugins/doctests.py", line 277
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cquery/vendor/nose/plugins/manager.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/plugins/manager.py", line 390
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cquery/vendor/nose/plugins/multiprocess.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/plugins/multiprocess.py", line 481
    except (KeyboardInterrupt, SystemExit), e:
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cquery/vendor/nose/plugins/plugintest.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/plugins/plugintest.py", line 407
    print munge_nose_output_for_doctest(out)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cquery/vendor/nose/sphinx'...
Listing './lib/python3.5/site-packages/cquery/vendor/nose/tools'...
Compiling './lib/python3.5/site-packages/cquery/vendor/nose/twistedtools.py'...
***   File "./lib/python3.5/site-packages/cquery/vendor/nose/twistedtools.py", line 169
    raise exc_type, exc_value, tb
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
